# svelte-inc-dec

./: Cargo.toml  README.md  build.rs
assets/: 1.webm
src/: main.rs
webui/: index.html  package-lock.json  package.json
webui/src/: App.svelte  app.css
